--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "google-auth-library": "^9.15.0",
     "graphql-type-json": "^0.3.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
