--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "i18next": "^23.16.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^7.9.3",
     "recharts": "^3.2.1"
   },
